--- a/public_html/.htaccess
+++ b/public_html/.htaccess
@@ -1,14 +1,7 @@
 RewriteEngine On
 
 
-# Rewrite URLs ending with .php to URLs without .php
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME}.php -f
-RewriteRule ^([^/]+)/?$ $1.php [L]
-
-# Ensure URLs without .php get the correct content
+# Redirect all requests to index.php except existing files or directories
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^([^/]+)/?$ $1.php [L]
-
-RewriteRule ^view/(.*)$ view.php?item=$1 [L,QSA]
+RewriteRule ^(.*)$ index.php?url=$1 [QSA,L]
